<resources>
    <string name="app_name">RecyclerList</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="check">Check</string>
    <string name="notification_not_found">Notification not found</string>
    <string name="select_all">Select all</string>
    <string name="cancel">Cancel</string>
    <string name="keyword_profile">Keyword</string>
    <string name="email_profile">Email</string>
    <string name="phone_number_profile">Phone number</string>
    <string name="client_type_profile">Client type</string>
    <string name="client_id_profile">Client ID:</string>
    <string name="security_profile">Security</string>
    <string name="terms_and_condition_profile">Terms and condition</string>
    <string name="about_application_profile">About application</string>
    <string name="turanbank_app_profile">Turanbank app</string>
    <string name="password_profile">Password</string>
    <string name="pin_profile">Pin</string>
    <string name="touch_id_profile">Touch ID</string>
    <string name="applied_profile">Applied</string>
    <string name="not_applied_profile">Not applied</string>
    <string name="face_id_profile">Face ID</string>
    <string name="screenshot_profile">Screenshot</string>
    <string name="devices_profile">Devices</string>
    <string name="language_profile">Language</string>
    <string name="google_pay_profile">Google pay</string>
    <string name="googlepay_added">Added</string>
    <string name="successfull_new">Successfull!</string>
    <string name="operation_successfull">Operation has been successfull</string>
    <string name="close">Close</string>
    <string name="operation_error">Operation hasn\'t been</string>
    <string name="error_new">Error</string>
    <string name="information_title">Information</string>
    <string name="information_detail">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="your_keyword_profile">Your keyword</string>
    <string name="old_keyword_profile">Old keyword</string>
    <string name="new_keyword_profile">New keyword</string>
    <string name="repeat_keyword_profile">Repeat keyword</string>
    <string name="approve_txt">Approve</string>
    <string name="old_password_profile">Old password</string>
    <string name="new_password_profile">New password</string>
    <string name="repeat_password_profile">Repeat password</string>
    <string name="add_new">+ Add new</string>
    <string name="current_device_profile">Current device</string>
    <string name="added_device_profile">Added device</string>
    <string name="new_mobile_device_notification">New mobile device</string>
    <string name="decline_device">Decline</string>
    <string name="otp_description">" OTP code sent your number +994 55 225 18 39"</string>
    <string name="otp_verification">OTP verification</string>
    <string name="send_code_again">I haven\'t code</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_txt">Confirm</string>
    <string name="your_pin">Your PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="create_new_pin">Create new PIN</string>
    <string name="repeat_new_pin">Repeat new PIN</string>
    <string name="cancel_camel_case">Cancel</string>
    <string name="iris_id_profile">Iris ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


<!--    <string name="app_name">Image Picker</string>-->
    <string name="action_github">Github Repository</string>

    <string name="action_camera_only">Camera Only</string>
    <string name="action_gallery_only">Gallery Only</string>
    <string name="action_all">All with new API</string>
</resources>