<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutAppActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/mlb_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/languageCard"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:elevation="1dp"
        app:background="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="4"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/language_profile"
                    android:textColor="@color/profile_txt_color"
                    android:textSize="13sp"
                    android:textStyle="normal" />
                <TextView
                    android:id="@+id/languageTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="English"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="end"
                android:scaleType="fitEnd"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:srcCompat="@drawable/forward_btn"
                tools:text="John Doe Max" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/googlepayCard"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:elevation="1dp"
        app:background="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageCard"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="4"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/google_pay_profile"
                    android:textColor="@color/profile_txt_color"
                    android:textSize="13sp"
                    android:textStyle="normal" />
                <TextView
                    android:id="@+id/googlepayStateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/googlepay_added"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="end"
                android:scaleType="fitEnd"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:srcCompat="@drawable/forward_btn"
                tools:text="John Doe Max" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aboutAppCard"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:elevation="1dp"
        app:background="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googlepayCard"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="4"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/about_application_profile"
                    android:textColor="@color/profile_txt_color"
                    android:textSize="13sp"
                    android:textStyle="normal" />
                <TextView
                    android:id="@+id/Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Version 1.4.7"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>